update main file to enable code generator and update code to be Java 11 compatible